1. remove fucking power debug log in power_debug.c 2. fix a minor bug in nubia board 3. update acc and gyr driver from STM open source.

--- a/arch/arm/configs/Z5_defconfig
+++ b/arch/arm/configs/Z5_defconfig
@@ -2272,7 +2272,7 @@ CONFIG_FEATURE_ZTEMT_SENSORS_LOG_ON=y
 CONFIG_ZTEMT_SENSORS_G_SENSOR=y
 # CONFIG_ZTEMT_SENSORS_G_SENSOR_KXTIK is not set
 CONFIG_ZTEMT_SENSORS_G_SENSOR_LSM330D=y
-CONFIG_FEATURE_ZTEMT_VIBRATOR_HAVE_MISS_EVENT=y
+# CONFIG_FEATURE_ZTEMT_VIBRATOR_HAVE_MISS_EVENT is not set
 CONFIG_ZTEMT_SENSORS_COMPASS=y
 CONFIG_ZTEMT_SENSORS_COMPASS_AKM8963=y
 # CONFIG_FEATURE_ZTEMT_SENSORS_COMPASS_UES_INT_MODE is not set
