Z5_defconfig:remove IR support, remove coresight support

--- a/arch/arm/configs/Z5_defconfig
+++ b/arch/arm/configs/Z5_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.68 Kernel Configuration
+# Linux/arm 3.4.69 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -2165,26 +2165,7 @@ CONFIG_VIDEO_MEDIA=y
 #
 # Multimedia drivers
 #
-CONFIG_RC_CORE=y
-CONFIG_LIRC=y
-CONFIG_USER_RC_INPUT=y
-CONFIG_RC_MAP=y
-CONFIG_IR_NEC_DECODER=y
-CONFIG_IR_RC5_DECODER=y
-CONFIG_IR_RC6_DECODER=y
-CONFIG_IR_JVC_DECODER=y
-CONFIG_IR_SONY_DECODER=y
-CONFIG_IR_RC5_SZ_DECODER=y
-CONFIG_IR_SANYO_DECODER=y
-CONFIG_IR_MCE_KBD_DECODER=y
-CONFIG_IR_LIRC_CODEC=y
-# CONFIG_RC_ATI_REMOTE is not set
-# CONFIG_IR_IMON is not set
-# CONFIG_IR_MCEUSB is not set
-# CONFIG_IR_REDRAT3 is not set
-# CONFIG_IR_STREAMZAP is not set
-# CONFIG_RC_LOOPBACK is not set
-CONFIG_IR_GPIO_CIR=y
+# CONFIG_RC_CORE is not set
 # CONFIG_MEDIA_ATTACH is not set
 CONFIG_MEDIA_TUNER=y
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
@@ -2211,7 +2192,6 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
-CONFIG_VIDEO_IR_I2C=y
 
 #
 # Audio decoders, processors and mixers
@@ -2306,8 +2286,6 @@ CONFIG_USB_GSPCA=m
 # CONFIG_VIDEO_PVRUSB2 is not set
 # CONFIG_VIDEO_HDPVR is not set
 # CONFIG_VIDEO_EM28XX is not set
-# CONFIG_VIDEO_CX231XX is not set
-# CONFIG_VIDEO_TM6000 is not set
 # CONFIG_VIDEO_USBVISION is not set
 # CONFIG_USB_ET61X251 is not set
 # CONFIG_USB_SN9C102 is not set
@@ -3228,19 +3206,7 @@ CONFIG_IOMMU_PGTABLES_L2=y
 CONFIG_MOBICORE_SUPPORT=m
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=m
-CONFIG_CORESIGHT=y
-CONFIG_HAVE_CORESIGHT_SINK=y
-# CONFIG_CORESIGHT_CSR is not set
-# CONFIG_CORESIGHT_TMC is not set
-CONFIG_CORESIGHT_TPIU=y
-CONFIG_CORESIGHT_ETB=y
-CONFIG_CORESIGHT_FUNNEL=y
-# CONFIG_CORESIGHT_REPLICATOR is not set
-# CONFIG_CORESIGHT_STM is not set
-CONFIG_CORESIGHT_ETM=y
-CONFIG_CORESIGHT_ETM_DEFAULT_ENABLE=y
-# CONFIG_CORESIGHT_ETM_PCSAVE_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_EVENT=m
+# CONFIG_CORESIGHT is not set
 
 #
 # File systems
