--- a/arch/arm/configs/Z5_defconfig
+++ b/arch/arm/configs/Z5_defconfig
@@ -335,7 +335,7 @@ CONFIG_ARCH_MSM=y
 # CONFIG_ARCH_QSD8X50 is not set
 # CONFIG_ARCH_MSM8X60 is not set
 CONFIG_ARCH_MSM8960=y
-CONFIG_ARCH_MSM8930=y
+# CONFIG_ARCH_MSM8930 is not set
 CONFIG_ARCH_APQ8064=y
 # CONFIG_ARCH_MSM8974 is not set
 # CONFIG_ARCH_MPQ8092 is not set
@@ -653,8 +653,8 @@ CONFIG_SPARSEMEM=y
 CONFIG_HAVE_MEMORY_PRESENT=y
 CONFIG_SPARSEMEM_EXTREME=y
 CONFIG_HAVE_MEMBLOCK=y
-CONFIG_SPLIT_PTLOCK_CPUS=999999
-# CONFIG_COMPACTION is not set
+CONFIG_SPLIT_PTLOCK_CPUS=4
+CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
