--- a/arch/arm/configs/Z5mini_defconfig
+++ b/arch/arm/configs/Z5mini_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.75 Kernel Configuration
+# Linux/arm 3.4.79 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
@@ -41,7 +41,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Parheliamm-Nubia-Z5Mini-V10k"
+CONFIG_LOCALVERSION="-Parheliamm-Nubia-Z5Mini-V10m"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -167,7 +167,6 @@ CONFIG_OPROFILE=y
 CONFIG_HAVE_OPROFILE=y
 CONFIG_KPROBES=y
 CONFIG_JUMP_LABEL=y
-CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_KRETPROBES=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -228,10 +227,12 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_CFQ is not set
+CONFIG_DEFAULT_SIO=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="cfq"
+CONFIG_DEFAULT_IOSCHED="sio"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -440,6 +441,7 @@ CONFIG_MSM_DSPS=y
 # CONFIG_MSM_ONCRPCROUTER is not set
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
+CONFIG_MSM_IPC_ROUTER_HSIC_XPRT=y
 CONFIG_MSM_IPC_ROUTER_SECURITY=y
 # CONFIG_MSM_DALRPC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
@@ -901,8 +903,8 @@ CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
 # CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
 # CONFIG_NETFILTER_XT_TARGET_TRACE is not set
-# CONFIG_NETFILTER_XT_TARGET_SECMARK is not set
-# CONFIG_NETFILTER_XT_TARGET_TCPMSS is not set
+CONFIG_NETFILTER_XT_TARGET_SECMARK=y
+CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
 
 #
@@ -2827,6 +2829,7 @@ CONFIG_USB_QCOM_DIAG_BRIDGE=y
 # CONFIG_USB_QCOM_DIAG_BRIDGE_TEST is not set
 CONFIG_USB_QCOM_MDM_BRIDGE=y
 CONFIG_USB_QCOM_KS_BRIDGE=y
+CONFIG_USB_QCOM_IPC_BRIDGE=y
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 CONFIG_USB_GADGET_DEBUG_FILES=y
@@ -3113,11 +3116,13 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 #
 # Qualcomm Atheros Prima WLAN module
 #
-CONFIG_PRIMA_WLAN=m
+CONFIG_PRIMA_WLAN=y
 # CONFIG_PRIMA_WLAN_BTAMP is not set
-# CONFIG_PRIMA_WLAN_LFR is not set
-# CONFIG_PRIMA_WLAN_OKC is not set
+CONFIG_PRIMA_WLAN_LFR=y
+CONFIG_PRIMA_WLAN_OKC=y
 # CONFIG_PRIMA_WLAN_11AC_HIGH_TP is not set
+# CONFIG_QCOM_VOWIFI_11R is not set
+CONFIG_QCOM_TDLS=y
 
 #
 # Qualcomm MSM specific device drivers
