--- a/arch/arm/configs/Z5_defconfig
+++ b/arch/arm/configs/Z5_defconfig
@@ -437,7 +437,7 @@ CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
 CONFIG_MSM_SMD_PKT=y
-CONFIG_MSM_DSPS=y
+# CONFIG_MSM_DSPS is not set
 # CONFIG_MSM_ONCRPCROUTER is not set
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
@@ -2917,10 +2917,10 @@ CONFIG_MMC_MSM=y
 CONFIG_MMC_MSM_SDC1_SUPPORT=y
 CONFIG_MMC_MSM_SDC1_8_BIT_SUPPORT=y
 # CONFIG_MMC_MSM_SDC2_SUPPORT is not set
-CONFIG_MMC_MSM_SDC3_SUPPORT=y
+# CONFIG_MMC_MSM_SDC3_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC3_POLLING is not set
 # CONFIG_MMC_MSM_SDC3_8_BIT_SUPPORT is not set
-CONFIG_MMC_MSM_SDC3_WP_SUPPORT=y
+# CONFIG_MMC_MSM_SDC3_WP_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC4_SUPPORT is not set
 # CONFIG_MMC_MSM_SDC5_SUPPORT is not set
 CONFIG_MMC_MSM_SPS_SUPPORT=y
